--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-native-dragdrop": "^1.2.2",
     "ng-html5dragdrop": "^1.3.3",
     "ngDraggable": "^0.1.11",
-    "angular-drag-and-drop-directives": "^1.0.4"
+    "angular-drag-and-drop-directives": "^1.0.4",
+    "swiper": "^3.4.0"
   }
 }
